--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,3 +2,20 @@ body {
   background-color: #5CE6E6;
   font-family: Sans-serif;
 }
+
+div {
+  height: 20px;
+  width: 80px;
+  border-color: #6495ED;
+  background-color: #BCD2EE;
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 5px;
+  margin: auto;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
