--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,12 +6,11 @@ body {
 div {
   height: 20px;
   width: 80px;
-  border-color: #6495ED;
-  background-color: #BCD2EE;
+  border-color: gray;
+  background-color: lightgray;
   border-style: solid;
   border-width: 3px;
   border-radius: 5px;
-  margin: auto;
   text-align: center;
 }
 
