--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,13 +4,13 @@ body {
 }
 
 div {
-  height: 20px;
-  width: 80px;
-  border-color: gray;
+  height: 1.25em;
+  width: 5em;
+  border-color: black;
   background-color: lightgray;
   border-style: solid;
-  border-width: 3px;
-  border-radius: 5px;
+  border-width: .2em;
+  border-radius: .4em;
   text-align: center;
 }
 
