--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,8 @@ div {
   width: 5em;
   border-color: black;
   background-color: lightgray;
-
+  border-style: solid;
+  border-width: .05em;
   border-radius: .4em;
   text-align: center;
 }
