--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #5CE6E6;
+  background-color: #C2C2A3;
   font-family: Sans-serif;
 }
 
@@ -16,5 +16,5 @@ div {
 
 a {
   text-decoration: none;
-  color: #333;
+  color: #37A4D6;
 }
