--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,12 +14,12 @@ body {
   text-align: center;
 }
 
-.gitbutton:hover {
-  border-color: cyan;
-  color: cyan;
-}
-
 a {
   text-decoration: none;
   color: #387FCF;
+}
+
+a:hover {
+  border-color: cyan;
+  color: white;
 }
