--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,6 +32,14 @@ a:hover {
 
 ul:before{
   content:attr(data-header);
+  margin-left: auto;
+}
+
+ul:before{
+    content:attr(data-header);
+    font-size:120%;
+    font-weight:bold;
+    margin-left:-15px;
 }
 
 footer {
