--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -16,10 +16,10 @@ div h4 {
   z-index: 1;
   text-align: center;
   background-color: gray;
-  margin-top: -20px;
+  margin-top: -1em;
   margin-bottom: 10px;
   width: 98.8%;
-  height: 60px;
+  height: 3.5em;
 }
 
 .title {
@@ -46,7 +46,7 @@ div h4 {
   position: relative;
   background-color: orange;
   width: 10%;
-  height: 421px;
+  height: 24em;
   margin-top: 50px;
   margin-bottom: 10px;
 }
@@ -56,7 +56,7 @@ div h4 {
   position: relative;
   background-color: cyan;
   width: 89.25%;
-  height: 421px;
+  height: 24em;
   margin-top: 50px;
   margin-bottom: 10px;
 }
@@ -66,7 +66,7 @@ div h4 {
   position: relative;
   text-align: center;
   background-color: gray;
-  height: 40px;
+  height: 2.5em;
 }
 
 #footer p {
