--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -1,5 +1,6 @@
 body {
-  font-size: 1em;
+  font-size: 16px;
+  line-height: 1.2em;
 }
 
 div {
@@ -50,7 +51,7 @@ div h4 {
   position: relative;
   background-color: orange;
   width: 10%;
-  height: 24em;
+  height: 27em;
   margin-top: 50px;
   margin-bottom: 10px;
 }
@@ -60,7 +61,7 @@ div h4 {
   position: relative;
   background-color: cyan;
   width: 89.25%;
-  height: 24em;
+  height: 27em;
   margin-top: 50px;
   margin-bottom: 10px;
   display: inline-block;
