--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,7 @@ body {
   padding-top: .3em;
   padding-bottom: .3em;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -41,13 +42,14 @@ ul:before {
   white-space: nowrap;
 }
 
-.foot {
+footer {
   background-color: #E7E7DA;
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left: 0;
   height: 3em;
   width: 100%;
   margin-left: -1em;
-  padding-right: 2em;
+  padding-right: 1em;
   text-indent: 1.5em;
 }
