--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,18 @@
-body {
-  background-color: #C2C2A3;
+* {
+  margin: 0;
   font-family: Sans-serif;
   font-size: 18px;
   line-height: 1.1em;
-  margin-bottom: 6em;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background-color: #C2C2A3;
+  height: 100%;
+  padding-left: 1em;
 }
 
 .button {
@@ -42,14 +51,23 @@ ul:before {
   white-space: nowrap;
 }
 
+.wrapper {
+  position: relative;
+  min-height: 90%;
+  margin: 0 auto -2em;
+  padding-bottom: 2em;
+}
+
 footer {
   background-color: #E7E7DA;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3em;
   width: 100%;
+  margin-top: 0;
   margin-left: -1em;
   padding-right: 1em;
+  padding-top: 1em;
   text-indent: 1.5em;
+}
+
+footer, .push {
+  height: 2em;
 }
