--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -53,7 +53,7 @@ div h4 {
   position: relative;
   background-color: orange;
   width: 10%;
-  height: 27em;
+  height: 100%;
   margin-top: 50px;
   margin-bottom: 10px;
 }
@@ -63,7 +63,7 @@ div h4 {
   position: relative;
   background-color: cyan;
   width: 89.25%;
-  height: 27em;
+  height: 100%;
   margin-top: 50px;
   margin-bottom: 10px;
   display: inline-block;
