--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -23,9 +23,8 @@ div h4 {
   background-color: gray;
   margin-top: -1em;
   margin-bottom: 10px;
-  margin-left: 1em;
-  margin-right: 1em;
-  width: 98.8%;
+  margin-left: 3px;
+  margin-right: 3px;
   height: 3.5em;
   white-space: nowrap;
   /*overflow: hidden;*/
@@ -79,8 +78,8 @@ div h4 {
   text-align: center;
   background-color: gray;
   height: 2.5em;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 #footer p {
