--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -24,11 +24,11 @@ div h4 {
   width: 98%;
   margin-top: -1em;
   margin-bottom: 10px;
-  margin-left: 4px;
-  margin-right: -4px;
+  margin-left: .4em;
+  margin-right: -.4em;
   height: 3.5em;
-  white-space: nowrap;
-  /*overflow: hidden;*/
+  /*white-space: nowrap;
+  overflow: hidden;*/
 }
 
 .title {
@@ -79,8 +79,8 @@ div h4 {
   text-align: center;
   background-color: gray;
   height: 2.5em;
-  margin-left: 4px;
-  margin-right: -4px;
+  margin-left: .4em;
+  margin-right: -.4em;
 }
 
 #footer p {
