--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -17,7 +17,8 @@ div h4 {
 }
 
 #header {
-  position: fixed;
+  position: relative;
+  clear: both;
   z-index: 1;
   text-align: center;
   background-color: gray;
