--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -17,7 +17,7 @@ div h4 {
 }
 
 #header {
-  position: relative fixed;
+  position: fixed;
   z-index: 1;
   text-align: center;
   background-color: gray;
