--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -51,7 +51,7 @@ div h4 {
 }
 
 .holder div {
-  background-color: #B2FFFF;
+  background-color: #66CCFF;
   margin-bottom: -100em;
   padding-bottom: 100em;
 }
